--- a/about.html
+++ b/about.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-   <header>
-      <ul>
-         <li><a href="index.html"> Home </a> </li>
-         <li><a href="photos.html"> Photos </a> </li>
-         <li><a href="about.html"> About </a> </li>
-      </ul> 
-   </header>
-</html>
+   <head> 
+      <link rel = "stylesheet" href = "style.css">
+      <link rel="shortcut icon" href="favicon.ico">
+      <meta charset = "UTF-8">
+      <title> Leo's Page </title>
+   </head>
+   <body> 
+      <header>
+         <nav>
+            <ul>
+               <li><a href="index.html"> Home </a> </li>
+               <li><a href="photos.html"> Photos </a> </li>
+               <li><a href="about.html"> About </a> </li>
+               </ul> 
+         </nav>
+      </header>
+   </body>  
