--- a/about.html
+++ b/about.html
@@ -4,16 +4,39 @@
       <link rel = "stylesheet" href = "style.css">
       <link rel="shortcut icon" href="favicon.ico">
       <meta charset = "UTF-8">
-      <title> Leo's Page </title>
+      <title> Woof! </title>
    </head>
    <body> 
       <header>
-         <nav>
-            <ul>
-               <li><a href="index.html"> Home </a> </li>
-               <li><a href="photos.html"> Photos </a> </li>
-               <li><a href="about.html"> About </a> </li>
-               </ul> 
-         </nav>
+         <h1 id = "toptitle"><a id = "toplink" href="index.html"> LEO </a> </h1>
+         <h2 id = "rightheader"> eat, play, sleep </h2>
+
       </header>
-   </body>  
+      <div id = "menubar"> 
+         <nav id = "leftmenu">
+           <ul>
+               <li class = "menu"> <a class= "menulink" href="http://www.facebook.com"> Facebook </a> </li>
+               <li class = "menu"> <a class= "menulink" href="http://www.twitter.com"> Twitter </a> </li>
+            </ul> 
+        </nav>
+        <nav id = "rightmenu">
+            <ul>
+               <li class = "menu"> <a class = "menulink" href="index.html"> Home </a> </li>
+               <li class = "menu"> <a class = "menulink" href="photos.html"> Photos </a> </li>
+               <li class = "menu"> <a class = "menulink" href="about.html"> About </a> </li>        
+            </ul>
+        </nav>
+      </div>
+      <div id = "about-div"> 
+         <div id = "aleft">
+            <P> Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof! Woof!
+         </div>
+         <div id = "center">
+            <p>Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! Howl! </p>
+         </div>
+         <div id = "aright">
+            <p> Eat chicken! Chase the squirrel! Sleep.... Eat chicken! Chase the squirrel! Sleep.... Eat chicken! Chase the squirrel! Sleep.... Eat chicken! Chase the squirrel! Sleep.... Eat chicken! Chase the squirrel! Sleep.... Eat chicken! Chase the squirrel! Sleep.... Eat chicken! Chase the squirrel! Sleep.... </p>
+         </div>
+      </div>
+   </body>
+</html>
